[gd_scene load_steps=10 format=2]

[ext_resource path="res://Niveles/Nivel 1/Nivel1.gd" type="Script" id=1]
[ext_resource path="res://Enemigos/Dengue/Enjambre/Enjambre.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemigos/Dengue/Mosquito/Mosquito.tscn" type="PackedScene" id=3]
[ext_resource path="res://Niveles/Nivel 1/Back.png" type="Texture" id=4]
[ext_resource path="res://Jugador/jugador.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUB/Paneles/PanelIzquierdo.tscn" type="PackedScene" id=6]
[ext_resource path="res://HUB/Paneles/PanelDerecho.tscn" type="PackedScene" id=7]
[ext_resource path="res://Control/Control.tscn" type="PackedScene" id=8]
[ext_resource path="res://HUB/Paneles/PanelResultado.tscn" type="PackedScene" id=9]

[node name="Nivel1" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]
Enemy = ExtResource( 2 )
EnemyStats = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -780.0
margin_top = -411.0
margin_right = 762.0
margin_bottom = 517.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.175781, 0.115892, 0.0734711, 1 )

[node name="Back" type="Sprite" parent="." index="1"]

position = Vector2( 8.24103, 40.5444 )
texture = ExtResource( 4 )

[node name="jugador" parent="." index="2" instance=ExtResource( 5 )]

position = Vector2( -547.168, 171.248 )

[node name="Camera2D" type="Camera2D" parent="." index="3"]

offset = Vector2( 0, 60 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.4, 1.4 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="PanelIzquierdo" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( -485.55, 412.152 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="PanelDerecho" parent="." index="5" instance=ExtResource( 7 )]

position = Vector2( 484.901, 396.317 )
scale = Vector2( 0.5, 0.5 )
_sections_unfolded = [ "Transform" ]

[node name="Control" parent="." index="6" instance=ExtResource( 8 )]

position = Vector2( 3.61102, 366.188 )
scale = Vector2( 0.7, 0.7 )
_sections_unfolded = [ "Transform" ]

[node name="PanelResultado" parent="." index="7" instance=ExtResource( 9 )]

position = Vector2( 221.658, 395.179 )
scale = Vector2( 0.6, 0.6 )
_sections_unfolded = [ "Transform" ]

[node name="Chanel1" type="Position2D" parent="." index="8"]

position = Vector2( 689.987, 171.248 )

[node name="Chanel2" type="Position2D" parent="." index="9"]

position = Vector2( 691.983, 84.4314 )

[node name="Chanel3" type="Position2D" parent="." index="10"]

position = Vector2( 691.657, -28.0885 )

[node name="Chanel4" type="Position2D" parent="." index="11"]

position = Vector2( 687.991, -155.519 )

[node name="Chanel5" type="Position2D" parent="." index="12"]

position = Vector2( 690.595, -288.244 )
scale = Vector2( 0.926401, 1 )


